# cephalog

frontend/: .gitignore  mix.exs
frontend/assets/css/: app.css
frontend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
frontend/lib/frontend/: application.ex  log_entry.ex  rust_api.ex
frontend/lib/frontend_web/: endpoint.ex  router.ex  telemetry.ex
frontend/lib/frontend_web/components/: core_components.ex
frontend/lib/frontend_web/components/layouts/: root.html.heex
frontend/lib/frontend_web/controllers/: page_controller.ex
frontend/lib/frontend_web/controllers/page_html/: dashboard.html.heex
frontend/lib/frontend_web/live/: monitor_live.ex
rust/: Cargo.toml  Makefile
rust/db/: clickhouse.rs  logs.json  mod.rs  schema.rs  util.rs
rust/db/mock/: database.rs
rust/src/: main.rs
rust/src/handlers/: logs.rs
rust/src/models/: failed_login.rs  log.rs  mod.rs
rust/src/routes/: logs.rs  mod.rs
rust/src/server/: server.rs
rust/tests/: clickhouse_insert_test.rs
